[package]
name = "rucos"
version = "0.3.0"
authors = ["Ben Brown <ben@beninter.net>"]
edition = "2021"
description = "Rust Microcontroller Operating System"
readme = "README.md"
repository = "https://github.com/bbrown1867/rucos-rs"
license = "BSD-3-Clause"
keywords = ["rtos", "arm", "cortex-m"]

[dependencies]
# TODO: Currently only ARM Cortex-M is supported. If another platform is
# added (e.g. RISC-V), will need to revisit how this is included.
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
naked-function = "0.1.5"

[dev-dependencies]
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
stm32f7xx-hal = { version = "0.8.0", features = ["rt", "stm32f767"] }
