[package]
name = "rucos-cortex-m"
version = "0.1.0"
authors = ["Ben Brown <ben@beninter.net>"]
edition = "2021"
description = "A port of the RuCOS kernel to ARM Cortex-M"
readme = "../README.md"
repository = "https://github.com/bbrown1867/rucos"
license = "BSD-3-Clause"
keywords = ["rtos", "arm", "cortex-m"]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
rucos = { version = "0.1.0", path = "../kernel" }

[dev-dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f7xx-hal = { version = "0.7.0", features = ["rt", "stm32f767"] }

[[test]]
name = "template"
harness = false
