[package]
name = "rucos-cortex-m"
version = "0.2.0"
authors = ["Ben Brown <ben@beninter.net>"]
edition = "2021"
description = "A port of the RuCOS kernel to ARM Cortex-M"
readme = "../README.md"
repository = "https://github.com/bbrown1867/rucos-rs"
license = "BSD-3-Clause"
keywords = ["rtos", "arm", "cortex-m"]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
naked-function = "0.1.5"
rucos = { version = "0.1.1", path = "../kernel" }

[dev-dependencies]
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0"
defmt-test = "0.4"
panic-probe = { version = "1.0", features = ["print-defmt"] }
stm32f7xx-hal = { version = "0.8.0", features = ["rt", "stm32f767"] }

[[test]]
name = "template"
harness = false
